# BulkReName

./: Cargo.toml  README.md  build.rs
src/: backup.rs  main.rs
