# Cargo.toml
[package]
name    = "BulkReName"
version = "0.1.0"
edition = "2021"
include = ["main.rs", "NotoSansJP-Regular.ttf"]

[dependencies]
eframe = "0.24"
rfd    = "0.9"
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser", "windef"] }
image = { version = "0.24", features = ["png", "jpeg", "webp", "gif", "bmp", "ico"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"